Opened 6 years ago

Closed 4 years ago

Last modified 21 months ago

#14932 closed bug (fixed)

Crowded popup menu's missing scroll widgets

Reported by: humdinger Owned by: X512
Priority: normal Milestone: R1/beta3
Component: Kits/Interface Kit/BMenu Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #16430
Platform: All

Description

This is hrev52933.

I see this with my rather large font list in Appearance and WonderBrush. The list of fonts is taller than my vertical screen resolution permits and has to be scrolled if you need a font firther down in the alphabet.

If the app window (e.g. Appearance) is near the top of the screen, the widgets are missing at the top and bottom of the font popup meu.
If I move the window down, so the font popup menu is approx. in the lower half of the screen, the widgets appear.

I suppose hrev52111 could be the culprit?

Attachments (2)

Appearance_top.png (60.2 KB ) - added by humdinger 5 years ago.
top: no scrollers
Appearance_bottom.png (46.9 KB ) - added by humdinger 5 years ago.
bottom: scrollers

Download all attachments as: .zip

Change History (18)

comment:1 by waddlesplash, 6 years ago

Indeed it may be.

comment:2 by waddlesplash, 6 years ago

Milestone: UnscheduledR1/beta2

comment:3 by pulkomandy, 5 years ago

Is it fixed in hrev53941?

comment:4 by humdinger, 5 years ago

Nope, still there.

in reply to:  4 comment:5 by X512, 5 years ago

Replying to humdinger:

Nope, still there.

Can you provide screenshot?

comment:6 by humdinger, 5 years ago

Here with the Appearance prefs near the top, scroll arrows are missing:

top: no scrollers

Here with the Appearance prefs further down, scroll arrows are there:

bottom: scrollers

by humdinger, 5 years ago

Attachment: Appearance_top.png added

top: no scrollers

by humdinger, 5 years ago

Attachment: Appearance_bottom.png added

bottom: scrollers

comment:7 by X512, 5 years ago

Seems that scrollers are present, but outside of screen. Something is wrong with BMenu::_UpdateWindowViewSize or BMenu::_CalcFrame.

I am recently working on menus, so I can take this ticket.

Last edited 5 years ago by X512 (previous) (diff)

comment:8 by humdinger, 5 years ago

Owner: changed from nobody to X512
Status: newassigned

Cool! Weird that it depends on where the pop-up menu is opened. If it's near the top of the screen, the arrows ar emissing, when it's further down they are there...

comment:9 by X512, 5 years ago

I have managed to reproduce this bug. It only appears with BMenuField when non-first item is selected (BMenuField attempts to show selected item at same position as menu field). Scrollers are not appear and bottom side of menu is outside of screen.

comment:10 by bruno, 5 years ago

strange that it does not work with the arrow keys either...

comment:11 by waddlesplash, 5 years ago

Milestone: R1/beta2

Ticket retargeted after milestone closed

comment:12 by waddlesplash, 5 years ago

Milestone: R1/beta3

comment:13 by humdinger, 5 years ago

Blocking: 16430 added

comment:15 by pulkomandy, 4 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev55145.

comment:16 by pulkomandy, 21 months ago

Component: Kits/Interface KitKits/Interface Kit/BMenu
Note: See TracTickets for help on using tickets.